src/components/RangeInput/style.scss
.rangeInputContainer {
  background: white;
  width: 100%;
  height: 30px;
  position: relative;

  .wrapper {
    border-radius: 5px;
  }

  .rangeInput {

    // min controller
    > *:nth-child(2) {
      align-items: flex-start;
    }

    // area selected
    > *:nth-child(3) {
      background: rgba(55, 108, 222, .5);
      box-shadow: 0 6px 6px rgba(0, 0, 0, .07);
      border: 2px solid var(--blueDark);
      cursor: move !important;
    }

    // max controller
    > *:nth-child(4) {
      align-items: flex-end;
    }
  }

  .step {
    width: calc(100% / 60);
    height: 100%;
    border-top: 4px solid var(--blue);

    div {
      width: 2px;
      background: var(--blue);
    }

    &:first-of-type {
      border-radius: 5px 0 0 0;
    }

    &:last-of-type {
      border-radius: 0 5px 0 0;
    }
  }

  .edge {
    background: var(--blueDark);
    width: 16px;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-size: 15px;
    border-radius: 5px;
  }
}

.tooltip {
  position: absolute;
  top: -15px;

  .content {
    width: 78px;
    background-color: white;
    color: black;
    border-radius: 6px;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    flex-direction: column;
    align-items: center;

    p {
      font-weight: bold;
      font-size: 10px;
      width: fit-content;
      margin: 10px 0 0 0;
      line-height: 10px;
    }

    span {
      font-size: 8px;
    }

    &::after {
      content: "";
      position: absolute;
      top: 100%;
      left: 50%;
      margin-left: -7px;
      border-width: 7px;
      border-style: solid;
      border-color: white transparent transparent transparent;
    }
  }
}

